--- a/UI/ERP.RazorComponents/ERP.RazorComponents.csproj
+++ b/UI/ERP.RazorComponents/ERP.RazorComponents.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.8.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
     <PackageReference Include="MudBlazor" Version="6.11.1" />
   </ItemGroup>
