--- a/UI/ERP.BlazorUI/ERP.BlazorUI.csproj
+++ b/UI/ERP.BlazorUI/ERP.BlazorUI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.8.1" />
     <PackageReference Include="MudBlazor" Version="6.11.1" />
   </ItemGroup>
 
