--- a/UI/ERP.BlazorUI/appsettings.json
+++ b/UI/ERP.BlazorUI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "StudentDatabase": "Data Source=LocalDatabase.db"
+    "StudentDatabase": "Data Source=LocalDatabase.db",
+    "PgSqlConnection": "Server=127.0.0.1;Port=5433;Database=myDataBase;User Id=erpuser;Password=abc123;"
   },
   "Logging": {
     "LogLevel": {
