--- a/Infrastructure/ERP.Repository.SQLite/ERP.Repository.SQLite.csproj
+++ b/Infrastructure/ERP.Repository.SQLite/ERP.Repository.SQLite.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Application\ERP.Application.StudentApp\ERP.Application.StudentApp.csproj" />
     <ProjectReference Include="..\..\Domain\ERP.Domain.Core\ERP.Domain.Core.csproj" />
+    <ProjectReference Include="..\ERP.Repository.PgSql\ERP.Repository.PgSql.csproj" />
   </ItemGroup>
 
 </Project>
