--- a/UI/ERP.BlazorUI/ERP.BlazorUI.csproj
+++ b/UI/ERP.BlazorUI/ERP.BlazorUI.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\ERP.RazorComponents\ERP.RazorComponents.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Pages\Department\" />
+    <Folder Include="Components\Pages\Academic\" />
+    <Folder Include="Components\Pages\SiteAdmin\" />
+  </ItemGroup>
+
 </Project>
