--- a/Infrastructure/ERP.Repository.PgSql/ERP.Repository.PgSql.csproj
+++ b/Infrastructure/ERP.Repository.PgSql/ERP.Repository.PgSql.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Faker.Net" Version="2.0.154" />
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
